# eiva

./: .gitignore  Dockerfile-Sample  Dockerfile-SelfService  README.md  README.zh-TW.md  SPEC.md  build-app.sh  build-docker.sh  docker-compose.yml  fix_i18n.js  update_i18n.js
.agents/: AGENTS.md
backend/: .env.example  .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CODE_QUALITY_PASS.md  CONTRIBUTING.md  Cargo.toml  EVALUATION.md  PARITY_PLAN.md  PHILOSOPHY.md  QUICKSTART.md  README.md  SECURITY.md  STYLE_GUIDE.md  config.example.toml  pr-description.md  scratch.py
backend/.github/: FUNDING.yml
backend/.github/workflows/: ci.yml
backend/assets/web/: index.html
backend/assets/web/assets/: index-BBCiIySD.js  index-BDOSTLYA.js  index-BMFFD2UU.js  index-BZQhq3VY.css  index-C65tI2pe.css  index-CU1nNq9q.js  index-Cc0DMFhe.css  index-CgJkZ39Q.js  index-D5Kj50FL.css  index-DTGE-26V.js  index-DmnFdkqq.css  index-ptFIlokp.js  index-uV1BMx00.css  index-zuGdB1CK.js
backend/config/cron/: hermess.json  inner.json  openclaw.json  os.json
backend/contrib/nanobot-prompt-guard/: README.md  prompt_guard.py
backend/crates/eiva-cli/: Cargo.toml
backend/crates/eiva-cli/src/: main.rs
backend/crates/eiva-cli/src/commands/: clawhub.rs  config.rs  gateway.rs  gateway_client.rs  import.rs  refresh_token.rs  shared.rs  status.rs  swarm.rs
backend/crates/eiva-core/: Cargo.toml
backend/crates/eiva-desktop/: Cargo.toml  Dioxus.toml
backend/crates/eiva-gateway/: Cargo.toml  build.rs  patch_api.rs  patch_api_sessions.rs
backend/crates/eiva-gateway/src/: admin.rs  api.rs  auth.rs  canvas_handler.rs  chat.rs  cli.rs  command_wrapper.rs  concurrent.rs  cron_dispatch.rs  db.rs  dispatch.rs  engine_handler.rs  errors.rs  helpers.rs  kernel_handler.rs  listen.rs  main.rs  mcp_handler.rs  model_handler.rs  panel_handler.rs  project_handler.rs  secrets_handler.rs  server.rs  service_handler.rs  session.rs  skills_handler.rs  system_prompt.rs  task_handler.rs  thread_handler.rs  thread_updates.rs  tool_executor.rs  workspace.rs
backend/crates/eiva-gateway/src/messenger_handler/: builders.rs  media.rs  mod.rs  prompt.rs
backend/crates/eiva-gateway/src/providers/: mod.rs
backend/crates/eiva-gateway/src/ssh/: mod.rs  server.rs
backend/crates/eiva-onboard/: Cargo.toml
backend/crates/eiva-onboard/src/: lib.rs  messaging.rs  prompts.rs  security.rs  skills.rs
backend/crates/eiva-tui/: Cargo.toml
backend/crates/eiva-tui/src/: action.rs  connection_dialog.rs  gateway_client.rs  main.rs  markdown.rs  pairing.rs  theme.rs  types.rs
backend/crates/eiva-tui/src/app/: app.rs  command_action.rs  events.rs  mod.rs
backend/crates/eiva-tui/src/app/tui_component/: events.rs  keyboard.rs  keyboard_normal.rs  mod.rs  state.rs
backend/crates/eiva-tui/src/components/: analytics_dialog.rs  api_key_dialog.rs  approvals_dialog.rs  auth_dialog.rs  channels_dialog.rs  command_menu.rs  credential_request_dialog.rs  cron_dialog.rs  details_dialog.rs  device_flow_dialog.rs  engines_dialog.rs  hatching_dialog.rs  input_bar.rs  logs_dialog.rs  mcp_dialog.rs  memory_dialog.rs  message.rs  messages.rs  model_selector_dialog.rs  pairing_dialog.rs  provider_selector_dialog.rs  root.rs  secrets_dialog.rs  services_dialog.rs  sidebar.rs  skills_dialog.rs  status_bar.rs  system_info_dialog.rs  thread_tabs.rs  tool_approval_dialog.rs  tool_call.rs  tool_perms_dialog.rs  tools_dialog.rs  user_prompt_dialog.rs  vault_unlock_dialog.rs
backend/crates/eiva-view/: Cargo.toml
backend/crates/eiva-web/: Cargo.toml
backend/crates/eiva-web/src/: lib.rs  transport.rs
backend/crates/rustyclaw-core/: Cargo.toml
backend/crates/rustyclaw-desktop/: Cargo.toml
backend/crates/rustyclaw-gateway/: Cargo.toml
backend/docs/: CLIENT_SPEC.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  LEARNING_ANALYSIS.md  RUST_IDIOMS_AUDIT.md  SANDBOX.md  SECURITY.md  eiva-background-tasks-plan.md  matrix-sync-fix.md  rustyclaw-background-tasks-plan.md  signal-cli-setup.md  v0.4.0-roadmap.md
backend/legacy/: index.js
backend/legacy/routes/: schedules.js
backend/legacy/services/: codexRunner.js  scheduleIntentParser.js  scheduleStore.js  taskStore.js
backend/node.js/routes/: openclawTasks.js  tasks.js
backend/node.js/services/: db.js  scheduleRunner.js  systemSettingsStore.js
backend/node.js/websocket/: socketServer.js
backend/scripts/: core_lines.sh  setup.sh
backend/testing-eiva-cli/: SKILL.md
backend/tests/: cli_conformance.rs  e2e.rs  exit_codes.rs  golden_files.rs  integration_gateway.rs  sandbox_enforcement.rs  skill_execution.rs  tool_execution.rs
backend/tests/golden/: help_command.txt  help_configure.txt  help_desktop.txt  help_doctor.txt  help_gateway.txt  help_gateway_start.txt  help_gateway_status.txt  help_gateway_stop.txt  help_main.txt  help_setup.txt  help_skills.txt  help_skills_list.txt  help_status.txt  help_tui.txt
backend/website/: README.md  index.html  install.ps1  install.sh
docs/guide/: API-en.md  API-ja.md  API-zh-TW.md
docs/spec/: SPEC-AUTH.md  SPEC-WORKFLOW.md  SPEC.md  agent-flow.md  ai-model.md  llama-cpp-2.md
frontend/: package.json  test.cjs  vite.config.js
frontend/app/: McpConfigPage.jsx  SkillConfigPage.jsx  SystemConfigPage.jsx  WorkflowEditor copy.jsx  WorkflowEditor.jsx  WorkspacePage.jsx  app.jsx  index.html  style.css  workflow-style.css
frontend/app/i18n/: en.js  index.jsx  ja.js  zh-TW.js
(+182 files in other folders)
