[package]
name = "eiva-gateway"
description = "Eiva gateway server — WebSocket/SSH session handling, model dispatch, messenger and tool orchestration. The client/protocol interface lives in eiva-core."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["semantic-memory"]
# Semantic vector memory (auto-ingest + recall via steel-memory). On by
# default for the gateway; disable for targets where ONNX Runtime is
# unavailable (e.g. 32-bit ARM).
semantic-memory = ["eiva-core/semantic-memory"]
mcp = ["eiva-core/mcp"]
matrix = ["eiva-core/matrix", "chat-system/matrix"]
whatsapp = ["eiva-core/whatsapp", "chat-system/whatsapp"]
signal-cli = ["eiva-core/signal-cli", "chat-system/signal-cli"]
all-messengers = ["matrix", "whatsapp", "signal-cli"]

[dependencies]
eiva-core.workspace = true
chat-system.workspace = true

anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
rpassword.workspace = true
anyhow-tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
salvo.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
url.workspace = true
chrono.workspace = true
base64.workspace = true
bincode.workspace = true
rand.workspace = true
uuid.workspace = true
regex.workspace = true
sysinfo.workspace = true
httpdate.workspace = true
ipnetwork.workspace = true
aho-corasick.workspace = true
dirs.workspace = true
directories.workspace = true
prost.workspace = true
prost-types.workspace = true

# SSH transport
ssh-key.workspace = true
russh = { version = "0.61.2", features = ["async-trait"] }
rand_core = { version = "0.6.4" }
sha2 = { version = "0.11.0" }
rusqlite = { version = "0.37", features = ["bundled-full"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
prost-build = "0.13"
