[package]
name = "eiva-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebSocket/WASM web client for Eiva"
publish = false

[features]
default = []

[dependencies]
eiva-view = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# WASM-specific dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "ErrorEvent",
    "CloseEvent",
    "console",
    "Window",
    "Document",
    "HtmlElement",
] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

[lints]
workspace = true
